@@ -156,3 +156,8 @@ Version 2.2     XXXX
     Bugfixes (win32):
         - keep RTS/CTS state on port setting changes [Patch 983106]
 
+    New Features:
+        - dsrdtr setting to enable/disable DSR/DTR flow control independently
+          from the rtscts setting. (Currenly Win32 only, ignored on other
+          platforms)
+
